update page title
Signed-off-by: Aman Kumar <aman2467@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet_main.css" media="screen">
 		<link rel="icon" type="image/x-icon" href="icons/favicon.png">
-		<title>ebook-self</title>
+		<title>Library</title>
 	</head>
 	<body>
 		<a href="ebooks/understanding_linux_kernel.pdf"><img class="books" src="icons/understanding_linux_kernel.png"></img></a>
