always open pdf link in new tab
Signed-off-by: Aman Kumar <aman2467@gmail.com>

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	</head>
 	<body id="bodyid">
 	<div id="divid">
-		<a href="ebooks/understanding_linux_kernel.pdf"><img class="books" src="icons/understanding_linux_kernel.png"></img></a>
-		<a href="ebooks/LKD.pdf"><img class="books" src="icons/LKD.png"></img></a>
-		<a href="ebooks/cpumemory.pdf"><img class="books" src="icons/cpumemory.png"></img></a>
-		<a href="ebooks/Understanding_l2_l3_l4_protocols.pdf"><img class="books" src="icons/ul234.png"></img></a>
+		<a href="ebooks/understanding_linux_kernel.pdf" target="_blank"><img class="books" src="icons/understanding_linux_kernel.png"></img></a>
+		<a href="ebooks/LKD.pdf" target="_blank"><img class="books" src="icons/LKD.png"></img></a>
+		<a href="ebooks/cpumemory.pdf" target="_blank"><img class="books" src="icons/cpumemory.png"></img></a>
+		<a href="ebooks/Understanding_l2_l3_l4_protocols.pdf" target="_blank"><img class="books" src="icons/ul234.png"></img></a>
 	</div>
 	</body>
 
